initial style guide

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellat fugit eius porro cumque sint reiciendis tempora officia accusantium minus quas voluptatibus natus aspernatur ex necessitatibus dolorem itaque minima accusamus?</p>
 </body>
 </html>
