--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel gram | Perfil de viagens</title>
-  <link rel="stylesheet" href="styles/index.css">
-</head>
-<body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellat fugit eius porro cumque sint reiciendis tempora officia accusantium minus quas voluptatibus natus aspernatur ex necessitatibus dolorem itaque minima accusamus?</p>
-</body>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travel gram | Perfil de viagens</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alice&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/index.css" />
+  </head>
+  <body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam,
+      repellat fugit eius porro cumque sint reiciendis tempora officia
+      accusantium minus quas voluptatibus natus aspernatur ex necessitatibus
+      dolorem itaque minima accusamus?
+    </p>
+  </body>
 </html>
