feat: inclusion of the header

--- a/index.html
+++ b/index.html
@@ -14,11 +14,73 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam,
-      repellat fugit eius porro cumque sint reiciendis tempora officia
-      accusantium minus quas voluptatibus natus aspernatur ex necessitatibus
-      dolorem itaque minima accusamus?
-    </p>
+    <div class="bg-surface-color">
+      <nav class="container">
+        <a href="#" id="logo">
+          <img src="/assets/logo.svg" alt="Logomarca" />
+        </a>
+
+        <ul id="primary-menu">
+          <li>
+            <a href="#">
+              <img src="/assets/icons/magnifying-glass.svg" alt="Pesquisar" />
+            </a>
+          </li>
+
+          <li>
+            <a href="#"> Explorar </a>
+          </li>
+
+          <li>
+            <a href="#"> Minhas viagens </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <img src="/assets/profile-pic.png" alt="Perfil" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <header class="bg-surface-color">
+        <div class="container">
+          <div id="profile">
+            <img src="/assets/profile-pic.png" alt="Imagem de perfil" />
+
+            <div>
+              <h1>Isabela Torres</h1>
+
+              <p>
+                Amante de viagens, cultura e gastronomia. 🌍✈️ <br> Aqui compartilho
+                as histórias registradas em cada clique, explorando cantinhos
+                fascinantes do nosso planeta a partir da movimentada cidade de
+                São Paulo. 🏙️📸
+              </p>
+            </div>
+          </div>
+
+          <ul id="info">
+            <li>
+              <img src="/assets/icons/map-pin.svg" alt="Icone de localização" />
+              <span>São Paulo, Brasil</span>
+            </li>
+
+            <li>
+              <img
+                src="/assets/icons/airplane-tilt.svg"
+                alt="Icone de viagens"
+              />
+              <span>37 países</span>
+            </li>
+
+            <li>
+              <img src="/assets/icons/image.svg" alt="Icone de fotos" />
+              <span>240 fotos</span>
+            </li>
+          </ul>
+        </div>
+      </header>
+    </div>
   </body>
 </html>
