feat: final project

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
               <h1>Isabela Torres</h1>
 
               <p>
-                Amante de viagens, cultura e gastronomia. 🌍✈️ <br> Aqui compartilho
-                as histórias registradas em cada clique, explorando cantinhos
-                fascinantes do nosso planeta a partir da movimentada cidade de
-                São Paulo. 🏙️📸
+                Amante de viagens, cultura e gastronomia. 🌍✈️ <br />
+                Aqui compartilho as histórias registradas em cada clique,
+                explorando cantinhos fascinantes do nosso planeta a partir da
+                movimentada cidade de São Paulo. 🏙️📸
               </p>
             </div>
           </div>
@@ -82,5 +82,35 @@
         </div>
       </header>
     </div>
+
+    <main>
+      <img src="/assets/images/image-01.png" alt="..." />
+      <img src="/assets/images/image-02.png" alt="..." />
+      <img src="/assets/images/image-03.png" alt="..." />
+      <img src="/assets/images/image-04.png" alt="..." />
+      <img src="/assets/images/image-05.png" alt="..." />
+      <img src="/assets/images/image-06.png" alt="..." />
+      <img src="/assets/images/image-07.png" alt="..." />
+      <img src="/assets/images/image-08.png" alt="..." />
+      <img src="/assets/images/image-09.png" alt="..." />
+      <img src="/assets/images/image-10.png" alt="..." />
+      <img src="/assets/images/image-11.png" alt="..." />
+    </main>
+
+    <footer>
+      <div class="container">
+        <span>Travelgram © 2024</span>
+
+        <ul>
+          <li>
+            <a href="#">Política de Privacidade</a>
+          </li>
+
+          <li>
+            <a href="#">Termos de Uso</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
